cluster/core/networking/traefik/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.local.danielvignoles.com`)
      kind: Rule
      #middlewares:
      #  - name: traefik-dashboard-basicauth
      #    namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-danielvignoles-com-tls
